--- a/"Shaokang".html
+++ b/"Shaokang".html
@@ -6,18 +6,18 @@
   <title>Your Name</title>
 </head>
 <body>
-   <h1>Hi My name is *****</h1>
-   <p>add your profile text here</p>
+   <h1>Hi My name is LI SHAOKANG</h1>
+   <p>Sophomore, majored in industrial design.</p>
 
-   <h2>My strengthes as a designer are...</h2>
+   <h2>My strengthes as a designer are below</h2>
     <ul>
-      <li>Strength01</li>
-      <li>Strength02</li>
-      <li>Strength03</li>
-      <li>Strength04</li>
+      <li>music-sensitive</li>
+      <li>color-sensitive</li>
+      <li>Have lots of ideas</li>
+      <li>lorem ipsum</li>
     </ul>
 
-   <h2>My Teammate is</h2>
+   <h2>My Teammate is Ashlyn Wong</h2>
    <p><a href="yourteamate.html">YOUR TEAMMATE</a></p>
 </body>
 
