--- a/Shaokang.html
+++ b/Shaokang.html
@@ -3,7 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Your Name</title>
+  <title>LI SHAOKANG,Styled as Naoyuki</title>
+  <img src="image/yourimagefilename.jpg" alt="short description" style="width:500px;height:500px;">
 </head>
 <body>
    <h1>Hi My name is LI SHAOKANG</h1>
