--- a/Shaokang.html
+++ b/Shaokang.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>LI SHAOKANG,Styled as Naoyuki</title>
-  <img src="IMG_6129.JPG" alt="short description" style="width:500px;height:500px;">
+  <img src="/image/IMG_6129.JPG" alt="short description" style="width:500px;height:500px;">
 </head>
 <body>
    <h1>Hi My name is LI SHAOKANG</h1>
