--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title>ID2116 Team X Project Page</title>
  </head>
  <body>
-    <h1>This is a Heading</h1>
+    <h1>This is a Head</h1>
     <p>This is a paragraph.</p>
     <p>This is another paragraph.</p>
  </body>
