--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  </head>
  <body>
     <h1>This is a Head</h1>
-    <p>This is a paragraph.</p>
+    <p>This is a para.</p>
     <p>This is another paragraph.</p>
  </body>
  
