--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT US</h3>
   <p class="w3-center"><em>I love photography</em></p>
-  <p>This is our very first website, and we are very glad that you just clicked in! Stay for a little while please.</p>
+  <p>This is our very first website, and we are very glad that you just clicked in! Stay for a little while please and don't forget to subscribe to our page.</p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
@@ -149,7 +149,7 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="/image/IMG_6129.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      <img src="/image/IMG_6129.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="personal">
     </div>
 
     <div class="w3-col m3">
