--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@ body, html {
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to our website. We are student majored in industrial design.</p>
+      <p>Welcome to our website. We are student majored in industrial design. This page is unsed to present what we have done in the class of Computing for Design
+      </p>
     </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">We're good at:</p>
