--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/w3images/parallax1.jpg');
+  background-image: url('https://mdn.mozillademos.org/files/7693/catfront.png');
   min-height: 100%;
 }
 
@@ -87,7 +87,7 @@ body, html {
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT US</h3>
-  <p class="w3-center"><em>I love photography</em></p>
+  <p class="w3-center"><em>We love design</em></p>
   <p>This is our very first website, and we are very glad that you just clicked in! Stay for a little while please and don't forget to subscribe to our page.</p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
