--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('https://mdn.mozillademos.org/files/7693/catfront.png');
+  background-image: url('https://images.app.goo.gl/Svtt8DXWnVyiPjQ27');
   min-height: 100%;
 }
 
