--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/w3images/parallax2.jpg");
+  background-image: url("https://images.unsplash.com/photo-1457551859869-d4b7ab27184c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2700&q=80");
   min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("/w3images/parallax3.jpg");
+  background-image: url("https://images.unsplash.com/photo-1523966211575-eb4a01e7dd51?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1253&q=80");
   min-height: 400px;
 }
 
@@ -91,13 +91,13 @@ body, html {
   <p>This is our very first website, and we are very glad that you just clicked in! Stay for a little while please and don't forget to subscribe to our page.</p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
+      <p><b><i class="fa fa-user w3-margin-right"></i>Avatar</b></p><br>
       <img src="/w3images/avatar_hat.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to our website. We are student majored in industrial design. This page is unsed to present what we have done in the class of Computing for Design
+      <p>Welcome to our website. We are student majored in industrial design. Our teams have two members, Ashlyn Wong and Shaokang Li. This page is used to present what we have done in the class of Computing for Design
       </p>
     </div>
   </div>
