--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ body, html {
     </div>
 
     <div class="w3-col m3">
-      <img src="/Users/naoyuki/专业课/C4D/id2116/image/IMG_6129.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+      <img src="/image/IMG_6129.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
     </div>
 
     <div class="w3-col m3">
