--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ body, html {
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Avatar</b></p><br>
-      <img src="/image/IMG_6129.JPG" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Avatar" width="500" height="333">
+      <img src="https://wx4.sinaimg.cn/mw690/ae955775gy1gb82vgpwhyj20sv0svtew.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Avatar" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
