--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ body, html {
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Avatar</b></p><br>
-      <img src="https://wx4.sinaimg.cn/mw690/ae955775gy1gb82vgpwhyj20sv0svtew.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Avatar" width="500" height="333">
+      <img src="https://images.unsplash.com/photo-1537815749002-de6a533c64db?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1690&q=80" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Avatar" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
@@ -110,7 +110,7 @@ body, html {
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
   </div>
-  <p class="w3-wide"><i class="fa fa-photo"></i>Photoshop</p>
+  <p class="w3-wide"><i class="fa fa-photo"></i>Rhinoceros 6</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
   </div>
