--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@ body, html {
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to our website. We are student majored in industrial design. Our team has two members, Ashlyn Wong and Shaokang Li. This page is used to present what we have done in the class of Computing for Design
+      <p>
+        
+        Welcome to our website. We are student majored in industrial design. Our team has two members, Ashlyn Wong and Shaokang Li. This page is used to present what we have done in the class of Computing for Design. All pictures attributes to Unsplash.
       </p>
     </div>
   </div>
