--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ body, html {
     </div>
 
     <div class="w3-col m3">
-      <img src="https://github.com/id2116-group7/id2116/blob/master/image/IMG_6129.JPG?raw=true" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+      <img src="https://github.com/id2116-group7/id2116/blob/master/image/IMG_6129.JPG?raw=true" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans" width="180" height="180">
     </div>
 
     <div class="w3-col m3">
