--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body, html {
     <div class="w3-col m6 w3-hide-small w3-padding-large">
       <p>
         
-        Welcome to our website. We are student majored in industrial design. Our team has two members, Ashlyn Wong and Shaokang Li. This page is used to present what we have done in the class of Computing for Design. All pictures attributes to Unsplash.
+        Welcome to our website. We are student majored in industrial design. Our team has two members, Ashlyn Wong and Shaokang Li. This page is used to present what we have done in the class of Computing for Design.
       </p>
     </div>
   </div>
@@ -170,19 +170,19 @@ body, html {
 
   <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
-      <img src="https://github.com/id2116-group7/id2116/blob/master/image/IMG_5245.jpeg?raw=true" onclick="onClick(this)" class="w3-hover-opacity" alt="Fair" width="180" height="180">
+      <img src="https://github.com/id2116-group7/id2116/blob/master/image/CF3E8D65-2AE0-41FC-867B-B99AD2AFED5D-27716-000001DDE2481066.jpeg?raw=true" onclick="onClick(this)" class="w3-hover-opacity" alt="Dawn 01" width="180" height="180">
     </div>
 
     <div class="w3-col m3">
-      <img src="https://github.com/id2116-group7/id2116/blob/master/image/IMG_5245.jpeg?raw=true" onclick="onClick(this)" class="w3-hover-opacity" alt="Fair" width="180" height="180">
+      <img src="https://github.com/id2116-group7/id2116/blob/master/image/B0F3AFAD-ECA8-40C9-BAE9-0414473BCE27-1687-0000002559A990C7.jpeg?raw=true" onclick="onClick(this)" class="w3-hover-opacity" alt="Changsha" width="180" height="180">
     </div>
 
     <div class="w3-col m3">
-      <img src="https://github.com/id2116-group7/id2116/blob/master/image/IMG_5245.jpeg?raw=true" onclick="onClick(this)" class="w3-hover-opacity" alt="Fair" width="180" height="180">
+      <img src="https://github.com/id2116-group7/id2116/blob/master/image/346D2559-B1A2-4702-8AA8-2F9FF189B972-48941-000004986542FFD6.jpeg?raw=true" onclick="onClick(this)" class="w3-hover-opacity" alt="Night Vision" width="180" height="180">
     </div>
 
     <div class="w3-col m3">
-      <img src="https://github.com/id2116-group7/id2116/blob/master/image/IMG_5245.jpeg?raw=true" onclick="onClick(this)" class="w3-hover-opacity" alt="Fair" width="180" height="180">
+      <img src="https://github.com/id2116-group7/id2116/blob/master/image/10A2C6DF-D822-4741-818B-7F20A972F9FD-27716-000001DE09120F08.jpeg?raw=true" onclick="onClick(this)" class="w3-hover-opacity" alt="Dawn 02" width="180" height="180">
     </div>
     <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
   </div>
@@ -211,7 +211,7 @@ body, html {
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
-      <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
+      <img src="http://nus.edu.sg/images/default-source/logo/white-1200x630.jpg" class="w3-image w3-round" style="width:100%">
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
