--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Ashlyn and Shaokang</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -99,7 +99,8 @@ body, html {
     <div class="w3-col m6 w3-hide-small w3-padding-large">
       <p>
         
-        Welcome to our website. We are student majored in industrial design. Our team has two members, Ashlyn Wong and Shaokang Li. This page is used to present what we have done in the class of Computing for Design.
+        Welcome to our website. We are student majored in industrial design. Our team has two members, Ashlyn Wong and Shaokang Li. This page is used to present what we have done in the class of Computing for Design. 
+        <p><a href="https://id2116-group7.github.io/id2116/Shaokang">Shaokang</a></p>
       </p>
     </div>
   </div>
