--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@ body, html {
       <p>
         
         Welcome to our website. We are student majored in industrial design. Our team has two members, Ashlyn Wong and Shaokang Li. This page is used to present what we have done in the class of Computing for Design. 
+        Click link below for team member's information.
         <p><a href="https://id2116-group7.github.io/id2116/Shaokang">Shaokang</a></p>
+        <p><a href="https://id2116-group7.github.io/id2116/ashlyn">ashlyn</a></p>
       </p>
     </div>
   </div>
@@ -147,7 +149,7 @@ body, html {
 
 <!-- Container (Portfolio Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
-  <h3 class="w3-center">OUR WORK</h3>
+  <h3 class="w3-center">OUR WORKS</h3>
   <p class="w3-center"><em>Here are some of our latest work.<br> Click on the images to make them bigger</em></p><br>
 
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
