--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body, html {
       <p>
         
         Welcome to our website. We are student majored in industrial design. Our team has two members, Ashlyn Wong and Shaokang Li. This page is used to present what we have done in the class of Computing for Design. 
-        Click link below for team member's information.
+        Click links below for team member's information.
         <p><a href="https://id2116-group7.github.io/id2116/Shaokang">Shaokang</a></p>
         <p><a href="https://id2116-group7.github.io/id2116/ashlyn">ashlyn</a></p>
       </p>
