--- a/Shaokang.html
+++ b/Shaokang.html
@@ -84,7 +84,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Music Production (Mixing/Arrangement/Original) </b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> 2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>I'm a amateur composer mainly using Logic Pro X and Kontakt 6. I can play several instruments including drums, guitar and keyboards. Also I can be a vocalist, not very one though.</p>
+          <p>Amateur composer mainly using Logic Pro X and Kontakt 6. I can play several instruments including drums, guitar and keyboards. Also I can be a vocalist, not very one though.</p>
           <hr>
         </div>
         <div class="w3-container">
