--- a/Shaokang.html
+++ b/Shaokang.html
@@ -115,7 +115,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>NUS</b></h5>
+          <h5 class="w3-opacity"><b>National University of Singapore</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2020 - 2020</h6>
           <p>Non-graduating Exchanger</p><br>
           <h2>My Teammate is Ashlyn Wong</h2>
