--- a/Shaokang.html
+++ b/Shaokang.html
@@ -121,6 +121,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h2>My Teammate is Ashlyn Wong</h2>
    <p><a href="https://id2116-group7.github.io/id2116/ashlyn">ashlyn</a></p>
    <p><a href="https://id2116-group7.github.io/id2116/">Team Page</a></p>
+   <p><a href="https://id2116-group7.github.io/id2116/week2">Week 2</a></p>
         </div>
       </div>
 
