--- a/week2.html
+++ b/week2.html
@@ -7,10 +7,13 @@
  </head>
  <body>
     <h1>my daily object is flashlight</h1>
-    <img src="https://images.unsplash.com/photo-1537815749002-de6a533c64db?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1690&q=80" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Avatar" width="500" height="333">
-    <img src="https://images.unsplash.com/photo-1537815749002-de6a533c64db?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1690&q=80" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Avatar" width="500" height="333">
+    <img src="https://github.com/id2116-group7/id2116/blob/master/week2%20shaokang/IMG_0112.JPG?raw=true" onclick="onClick(this)" class="w3-hover-opacity" alt="FLASHLIGHT" width="300" height="300">
+    <img src="https://github.com/id2116-group7/id2116/blob/master/week2%20shaokang/IMG_0113.JPG?raw=true" onclick="onClick(this)" class="w3-hover-opacity" alt="FLASHLIGHT" width="300" height="300">
     <p>and if you turn on the flash light and take it near to the microbit...</p>
- 
+    <video width="320" height="240" controls>
+        <source src="/week2 shaokang/IMG_0116.MOV" type="video/mov">
+
+    </video>
     <h2>just like that</h2>
    
     <h2>Back to the main page</h2>
