--- a/week2.html
+++ b/week2.html
@@ -10,8 +10,8 @@
     <img src="https://github.com/id2116-group7/id2116/blob/master/week2%20shaokang/IMG_0112.JPG?raw=true" onclick="onClick(this)" class="w3-hover-opacity" alt="FLASHLIGHT" width="300" height="300">
     <img src="https://github.com/id2116-group7/id2116/blob/master/week2%20shaokang/IMG_0113.JPG?raw=true" onclick="onClick(this)" class="w3-hover-opacity" alt="FLASHLIGHT" width="300" height="300">
     <p>and if you turn on the flash light and take it near to the microbit...</p>
-    <video width="320" height="240" controls>
-        <source src="/week2 shaokang/IMG_0116.MOV" type="video/mov">
+    <video width="1080" height="720" controls>
+        <source src="/week2 shaokang/IMG_0116.mp4" type="video/mp4">
 
     </video>
     <h2>just like that</h2>
